# erlang-prebuilt

./: .bazelrc  MODULE.bazel  README.md
ncurses/: BUILD.ncurses.bazel  extensions.bzl
openssl/: BUILD.nasm.bazel  BUILD.openssl.bazel  extensions.bzl
