module(name = "erlang_prebuilt", version = "0.1")

bazel_dep(name = "hermetic_cc_toolchain", version = "3.0.1")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_perl", version = "0.2.0")

openssl = use_extension("//openssl:extensions.bzl", "openssl_extensions")
use_repo(openssl, "openssl")
use_repo(openssl, "nasm")

ncurses = use_extension("//ncurses:extensions.bzl", "ncurses_extensions")
use_repo(ncurses, "ncurses")

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig_toolchains, "zig_sdk")

register_toolchains(
    # if no `--platform` is specified, these toolchains will be used for
    # (linux,darwin,windows)x(amd64,arm64)
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)