load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

# Instructions to compile at https://github.com/mirror/ncurses/blob/v5.9/INSTALL

filegroup(
    name = "all_srcs",
    srcs = glob(
        include = ["**"],
        exclude = ["*.bazel"],
    ),
)

LIB_NAME = "libncurses"

configure_make(
    name = "ncurses_default",
    configure_in_place = True,
    configure_options = [],
    env = select({
        "@platforms//os:macos": {
            "AR": "",
            "PERL": "$$EXT_BUILD_ROOT$$/$(PERL)",
        },
        "//conditions:default": {
            "PERL": "$$EXT_BUILD_ROOT$$/$(PERL)",
        },
    }),
    lib_name = LIB_NAME,
    lib_source = ":all_srcs",
    # Note that for Linux builds, libssl must come before libcrypto on the linker command-line.
    # As such, libssl must be listed before libcrypto
    out_shared_libs = select({
        "@platforms//os:macos": [
            "libncurses.dylib",
            "libcurses.dylib",
        ],
        "//conditions:default": [
            "libncurses.so",
            "libcurses.so",
        ],
    }),
    toolchains = ["@rules_perl//:current_toolchain"],
)
